--- a/resources.html
+++ b/resources.html
@@ -36,11 +36,11 @@
 				<p>Get setup with our starter repos, frontend templates, and data sandbox environments. Perfect for hack nights or solo projects.</p>
 
 				<h2>Documentation</h2>
-				<img src="https://via.placeholder.com/800x300?text=API+Docs+Preview" alt="" class="image fit" />
+				<img src="" alt="" class="image fit" />
 				<p>Explore the TepperOS API, contribution guides, and best practices for working across teams. Docs are hosted on GitHub Pages.</p>
 
 				<h2>Mentor Office Hours</h2>
-				<img src="https://via.placeholder.com/800x300?text=Mentorship+Info" alt="" class="image fit" />
+				<img src="" alt="" class="image fit" />
 				<p>Connect with experienced alumni every Friday for walkthroughs, idea validation, or pitch practice. Signups managed via Slack.</p>
 
 				<ul class="actions special">
