Added profile page (wip)

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 				<ul class="icons">
 					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="profile.html" class="icon solid fa-user"><span class="label">Profile</span></a></li>
 				</ul>
 			</nav>
 
