--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,11 @@
 				<li class="active"><a href="projects.html">Projects</a></li>
 				<li><a href="resources.html">Resources</a></li>
 			</ul>
+			<ul class="icons">
+				<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+				<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				<li><a href="profile.html" class="icon solid fa-user"><span class="label">Profile</span></a></li>
+			</ul>
 		</nav>
 
 		<div id="main">
