Updated profile page (wip)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 			<!-- Intro -->
 			<div id="intro">
-				<h1>Welcome to<br />TepperOS</h1>
+				<h1>Welcome to<br /><span class="logo-stylized"><span class="tepper">Tepper</span><span class="os">OS</span></span></h1>
 				<p>An open-source collaboration platform built by and for Tepper students and alumni. <br />
 				Empowering innovation, research, and shared ingenuity in business, tech, and beyond.</p>
 				<ul class="actions">
@@ -25,7 +25,12 @@
 
 			<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo">TepperOS</a>
+				<a href="index.html" class="logo">
+					<img src="images/logo2.png" alt="CMU Logo" style="height: 40px; margin-right: 10px;">
+					<span class="logo-stylized">
+						<span class="tepper">Tepper</span><span class="os">OS</span>
+					</span>
+				</a>
 			</header>
 
 			<!-- Nav -->
