--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,12 @@
 	<div id="wrapper">
 
 		<header id="header">
-			<a href="index.html" class="logo">TepperOS</a>
+			<a href="index.html" class="logo">
+				<img src="images/logo2.png" alt="CMU Logo" style="height: 40px; margin-right: 10px;">
+				<span class="logo-stylized">
+					<span class="tepper">Tepper</span><span class="os">OS</span>
+				</span>
+			</a>
 		</header>
 
 		<nav id="nav">
